Source/WebKit/chromium/WebKit.gyp
@@ -643,6 +643,7 @@
                                 # We should not include files depending on webkit_support.
                                 # These tests depend on webkit_support and
                                 # functions defined only in !WEBKIT_IMPLEMENTATION.
+                                'tests/IDBCleanupOnIOErrorTest.cpp',
                                 'tests/LevelDBTest.cpp',
                             ],
                             'conditions': [
