Source/WebKit/chromium/WebKit.gypi
@@ -76,6 +76,7 @@
             'tests/GraphicsLayerChromiumTest.cpp',
             'tests/IDBAbortOnCorruptTest.cpp',
             'tests/IDBBindingUtilitiesTest.cpp',
+            'tests/IDBCleanupOnIOErrorTest.cpp',
             'tests/IDBDatabaseBackendTest.cpp',
             'tests/IDBFakeBackingStore.h',
             'tests/IDBKeyPathTest.cpp',
